--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rs-form",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "react from",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "react": "^0.14.7",
+    "rs-input": "0.0.4",
+    "rs-select": "0.0.1",
     "rs-util": "^0.1.0"
   }
 }
